# smart_light

./: .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  Makefile  QUICKSTART.md  README.md  SETUP_SUMMARY.md  main.py  pyproject.toml
docs/: UV_GUIDE.md  UV_MIGRATION.md
helpers/: convolve.ipynb  fully_connected.ipynb  txt_to_wav.py
linker/: artemis_atp.ld
python/: convolve.ipynb
python/notebooks/: fully_connected.ipynb  train.ipynb
src/: RingBuffer.h  am_bsp.c  am_bsp.h  am_devices.h  layers.cpp  layers.h  main.c  main.cpp  pdm.cpp  pdm.h  uart.cpp  uart.h
tools/: artemis_svl.py
